shopfyinternchallenge/src/images/_displayImages.scss
@use '@carbon/react/scss/components/search';
@use '@carbon/react/scss/components/date-picker';
@use '@carbon/react/scss/components/tabs';

.background {
    max-height: 100rem;
    overflow: scroll;
    border-radius: 2rem;
    padding-top: 3rem;
    padding-bottom: 3rem;
    display: flex;
    background-color: dimgray;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
}

div#ccs-3-tabpanel-0 {
    padding: 0;
}

.cds--date-picker-container {
    padding-left: 4rem;
    padding-right: 4rem;
    margin-bottom: 2rem;
}

label.cds--label {
    color: white !important;
}

.cds--date-picker {
    display: flex;
    flex-wrap: wrap;
    align-self: center;
    justify-content: center;
}

.cds--search.cds--search--md {
    width: 70%;
}

.searchConstraints {
    max-width: 50rem;
    padding-left: 1rem;
    padding-right: 1rem;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 2rem;
    margin-top: 2rem;
    display: flex;
    justify-content: center;
}

.image {
    width: 100%;
    object-fit: contain;
}

.imageGrouping {
    display: flex;
    height: 350px;
    width: 100%;
    margin-bottom: 1rem;
    object-fit: contain !important;
    margin-left: auto;
    margin-right: auto;
    overflow: hidden;
}

.likesComponent {
    color: white;
    width: 4rem;
    height: 5rem;
    font-size: 16px;
    display: flex;
    flex-direction: column;
    padding: 12px;
    justify-content: center;
    margin-top: .5rem;
}

.likedIcon {
    margin-left: auto;
    margin-right: auto;
}

.cardGroup {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.card {
    max-width: 300px;
    height: 45rem;
    width: 100%;
    padding: 5rem;
    padding-bottom: 3rem !important;
    padding-top: 3rem !important;
    margin: 2rem;
    background-color: #282c34;
    margin-bottom: 4rem;
    border-radius: 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.Polaris-Icon {
    max-width: 4rem !important;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.Polaris-Heading {
    font-size: 27px !important;
    height: 6rem;
}

.Polaris-Button {
    padding-bottom: 11px;
    max-width: 5.5rem;
    width: 100%;
    background-color: #282c34;
}

svg.Polaris-Icon__Svg {
    fill: white;
}

span.Polaris-Button__Text {
    color: white;
}

.Polaris-Stack__Item, .Polaris-MediaCard__MediaContainer.Polaris-MediaCard--portrait.Polaris-MediaCard--sizeSmall {
    line-height: 32px;
    font-size: 20px;
    max-width: 500px;
}

p.description {
    width: 500px;
    text-align: center;
    margin: auto;
}

.likeBtn {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.info {
    border: 2px solid red;
    border-radius: 3px;
    display: flex;
    cursor: pointer;
}

.like {
    height: 60px;
    width: 60px;
    background: url("like.png");
    position: absolute;
}

.subTitle {
    margin-bottom: 4rem;
}

